--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,18 +6,37 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch RedundantBrackets",
+            "request": "launch",
+            "mainClass": "RedundantBrackets",
+            "projectName": "Java Codes_1ebcd9c7"
+        },
+        {
+            "type": "java",
+            "name": "Launch NQueensBB",
+            "request": "launch",
+            "mainClass": "NQueensBB",
+            "projectName": "Java Codes_1ebcd9c7"
+        },
+        {
+            "type": "java",
+            "name": "Launch program",
+            "request": "launch",
+            "mainClass": "program",
+            "projectName": "Java Codes_1ebcd9c7"
+        },
+        {
+            "type": "java",
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "Main",
-            
             "projectName": "Java Codes_1ebcd9c7"
         },
         {
             "type": "java",
             "name": "Launch Current File",
             "request": "launch",
-            "mainClass": "${file}",
-            
+            "mainClass": "${file}"
         },
         {
             "type": "java",
