--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Interleave",
+            "request": "launch",
+            "mainClass": "Interleave",
+            "projectName": "Java Codes_1ebcd9c7"
+        },
+        {
+            "type": "java",
             "name": "Launch RedundantBrackets",
             "request": "launch",
             "mainClass": "RedundantBrackets",
