--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,190 +1,232 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "java",
-            "name": "Launch sum",
-            "request": "launch",
-            "mainClass": "sum",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch maxRodSeg",
-            "request": "launch",
-            "mainClass": "DP.maxRodSeg",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch chords",
-            "request": "launch",
-            "mainClass": "DP.chords",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch LIS",
-            "request": "launch",
-            "mainClass": "DP.LIS",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch LCS",
-            "request": "launch",
-            "mainClass": "DP.LCS",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch permute",
-            "request": "launch",
-            "mainClass": "Array.permute",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch subsequences",
-            "request": "launch",
-            "mainClass": "Strings.subsequences",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch KMP",
-            "request": "launch",
-            "mainClass": "Strings.KMP",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch ArrangeAlt",
-            "request": "launch",
-            "mainClass": "Array.ArrangeAlt",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch friendsPairing",
-            "request": "launch",
-            "mainClass": "friendsPairing",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch hello",
-            "request": "launch",
-            "mainClass": "hello",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch LexoNums",
-            "request": "launch",
-            "mainClass": "LexoNums",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch CodejamQ1",
-            "request": "launch",
-            "mainClass": "CodejamQ1",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch coinChange",
-            "request": "launch",
-            "mainClass": "coinChange",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch MST",
-            "request": "launch",
-            "mainClass": "Graphs.MST",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch sorting",
-            "request": "launch",
-            "mainClass": "sorting",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch catalan",
-            "request": "launch",
-            "mainClass": "catalan",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch RatMaze",
-            "request": "launch",
-            "mainClass": "RatMaze",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch traversals",
-            "request": "launch",
-            "mainClass": "Graphs.traversals",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch Interleave",
-            "request": "launch",
-            "mainClass": "Interleave",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch RedundantBrackets",
-            "request": "launch",
-            "mainClass": "RedundantBrackets",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch NQueensBB",
-            "request": "launch",
-            "mainClass": "NQueensBB",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch program",
-            "request": "launch",
-            "mainClass": "program",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch Main",
-            "request": "launch",
-            "mainClass": "Main",
-            "projectName": "Java Codes_1ebcd9c7"
-        },
-        {
-            "type": "java",
-            "name": "Launch Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
-        {
-            "type": "java",
-            "name": "Launch start",
-            "request": "launch",
-            "mainClass": "start",
-            "console": "internalConsole",
-            "projectName": "Java Codes_1ebcd9c7"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "java",
+      "name": "Launch numPad",
+      "request": "launch",
+      "mainClass": "Recursion.numPad",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch shiftx",
+      "request": "launch",
+      "mainClass": "Recursion.shiftx",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch traversals",
+      "request": "launch",
+      "mainClass": "Graphs.Graphs.traversals",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch NQueens",
+      "request": "launch",
+      "mainClass": "Backtracking.NQueens",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch printEncodings",
+      "request": "launch",
+      "mainClass": "Backtracking.printEncodings",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch BallsInBoxes",
+      "request": "launch",
+      "mainClass": "Array.Backtracking.BallsInBoxes",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch sum",
+      "request": "launch",
+      "mainClass": "sum",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch maxRodSeg",
+      "request": "launch",
+      "mainClass": "DP.maxRodSeg",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch chords",
+      "request": "launch",
+      "mainClass": "DP.chords",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch LIS",
+      "request": "launch",
+      "mainClass": "DP.LIS",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch LCS",
+      "request": "launch",
+      "mainClass": "DP.LCS",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch permute",
+      "request": "launch",
+      "mainClass": "Array.permute",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch subsequences",
+      "request": "launch",
+      "mainClass": "Strings.subsequences",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch KMP",
+      "request": "launch",
+      "mainClass": "Strings.KMP",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch ArrangeAlt",
+      "request": "launch",
+      "mainClass": "Array.ArrangeAlt",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch friendsPairing",
+      "request": "launch",
+      "mainClass": "friendsPairing",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch hello",
+      "request": "launch",
+      "mainClass": "hello",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch LexoNums",
+      "request": "launch",
+      "mainClass": "LexoNums",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch CodejamQ1",
+      "request": "launch",
+      "mainClass": "CodejamQ1",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch coinChange",
+      "request": "launch",
+      "mainClass": "coinChange",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch MST",
+      "request": "launch",
+      "mainClass": "Graphs.MST",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch sorting",
+      "request": "launch",
+      "mainClass": "sorting",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch catalan",
+      "request": "launch",
+      "mainClass": "catalan",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch RatMaze",
+      "request": "launch",
+      "mainClass": "RatMaze",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch traversals",
+      "request": "launch",
+      "mainClass": "Graphs.traversals",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch Interleave",
+      "request": "launch",
+      "mainClass": "Interleave",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch RedundantBrackets",
+      "request": "launch",
+      "mainClass": "RedundantBrackets",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch NQueensBB",
+      "request": "launch",
+      "mainClass": "NQueensBB",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch program",
+      "request": "launch",
+      "mainClass": "program",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch Main",
+      "request": "launch",
+      "mainClass": "Main",
+      "projectName": "Java Codes_1ebcd9c7"
+    },
+    {
+      "type": "java",
+      "name": "Launch Current File",
+      "request": "launch",
+      "mainClass": "${file}"
+    },
+    {
+      "type": "java",
+      "name": "Launch start",
+      "request": "launch",
+      "mainClass": "start",
+      "console": "internalConsole",
+      "projectName": "Java Codes_1ebcd9c7"
+    }
+  ]
 }
